# JACTUS

./: .gitignore  .mcp.json  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  GEMINI.md  GROK.md  LICENSE  Makefile  README.md  gemini-extension.json  jactus-demo.cast  pyproject.toml  setup.py  simulate_mortgage.py
.agent/: skills.md
.github/workflows/: ci.yml  docs.yml  publish.yml
docs/: ARCHITECTURE.md  ARRAY_MODE.md  PAM.md  conf.py  derivatives.md  index.rst  installation.rst  quickstart.rst
docs/api/: index.rst
docs/guides/: index.rst
docs/spec/: actus_overview.rst
examples/: basic_example.py  cross_currency_basis_swap_example.py  fx_swap_example.py  interest_rate_swap_example.py  lam_example.py  pam_example.py  portfolio_valuation_example.py  portfolio_valuation_vectorized_example.py
examples/notebooks/: .gitkeep  00_getting_started_pam.ipynb  01_annuity_mortgage.ipynb  02_options_contracts.ipynb  03_interest_rate_cap.ipynb  04_stock_commodity.ipynb  05_gpu_tpu_portfolio_benchmark.ipynb  06_gallery_of_contracts.ipynb  07_demo_cli_and_python.ipynb  README.md
scripts/: build_docs.sh  check_quality.sh  run_tests.sh  setup_dev.sh
skills/jactus/: SKILL.md
skills/jactus/assets/: pam_template.py  portfolio_template.py  swap_template.py
skills/jactus/references/: contracts.md  gws-integration.md  risk-factors.md
skills/jactus/scripts/: validate_and_simulate.py
src/jactus/: __init__.py  cli.py  exceptions.py  logging_config.py
src/jactus/cli/: __init__.py  contract.py  docs.py  observer.py  output.py  portfolio.py  risk.py  simulate.py
src/jactus/contracts/: __init__.py  ann.py  ann_array.py  array_common.py  base.py  capfl.py  cec.py  ceg.py  clm.py  com.py  com_array.py  csh.py  csh_array.py  futur.py  futur_array.py  fxout.py  fxout_array.py  lam.py  lam_array.py  lax.py  lax_array.py  nam.py  nam_array.py  optns.py  optns_array.py  pam.py  pam_array.py  portfolio.py  stk.py  stk_array.py  swaps.py  swppv.py  swppv_array.py  ump.py
src/jactus/contracts/utils/: __init__.py  exercise_logic.py  underlier_valuation.py
src/jactus/core/: __init__.py  attributes.py  events.py  states.py  time.py  types.py
src/jactus/engine/: __init__.py  lifecycle.py  simulator.py  vectorized.py
src/jactus/functions/: __init__.py  composition.py  payoff.py  state.py
src/jactus/observers/: __init__.py  behavioral.py  child_contract.py  deposit_transaction.py  prepayment.py  risk_factor.py  scenario.py
src/jactus/utilities/: __init__.py  calendars.py  conventions.py  date_array.py  math.py  schedules.py  surface.py
tests/: __init__.py  conftest.py  test_phase0.py  test_utils.py
tests/cross_validation/: README.md  __init__.py  actus_mapper.py  conftest.py  runner.py  test_actus_clm.py  test_actus_credit.py  test_actus_derivatives.py  test_actus_exotic.py  test_actus_pam.py  test_actus_principal.py  test_actus_simple.py  test_actus_swaps.py
tests/integration/: __init__.py  test_amortizing_contracts.py  test_contract_validation.py  test_derivative_composition.py  test_derivative_validation.py  test_jax_compatibility.py  test_prepayment.py  test_schedule_generation.py
tests/performance/: __init__.py  test_performance.py
tests/property/: __init__.py  test_contract_properties.py  test_schedule_properties.py  test_year_fraction_properties.py
tests/unit/contracts/: __init__.py  test_ann.py  test_ann_array.py  test_base.py  test_capfl.py  test_cec.py  test_ceg.py  test_clm.py  test_com.py  test_com_array.py  test_csh.py  test_csh_array.py  test_factory.py  test_futur.py  test_futur_array.py  test_fxout.py  test_fxout_array.py  test_lam.py  test_lam_array.py  test_lax.py  test_lax_array.py  test_nam.py  test_nam_array.py  test_optns.py  test_optns_array.py  test_pam.py  test_pam_array.py  test_portfolio.py  test_stk.py  test_stk_array.py  test_swaps.py  test_swppv.py  test_swppv_array.py  test_ump.py
tests/unit/contracts/utils/: __init__.py  test_exercise_logic.py  test_underlier_valuation.py
tests/unit/core/: test_attributes.py  test_events.py  test_states.py  test_time.py  test_types.py
tests/unit/engine/: test_lifecycle.py  test_simulator.py
tests/unit/functions/: test_composition.py  test_payoff.py  test_state.py
tests/unit/observers/: test_behavioral.py  test_child_contract.py  test_risk_factor.py
tests/unit/utilities/: test_calendars.py  test_conventions.py  test_date_array.py  test_math.py  test_schedules.py  test_surface.py
tools/chub/: DOC.md  README.md  array-mode.md  contract-types.md  risk-factors.md
tools/mcp-server/: .gitignore  README.md  pyproject.toml
tools/mcp-server/src/jactus_mcp/: __init__.py  __main__.py  models.py  server.py
tools/mcp-server/src/jactus_mcp/tools/: __init__.py  _utils.py  contracts.py  documentation.py  examples.py  risk.py  simulate.py  system.py  validation.py
tools/mcp-server/tests/: __init__.py  test_contracts.py  test_documentation.py  test_examples.py  test_mcp_features.py  test_mcp_integration.py  test_simulate.py  test_system.py  test_validation.py
